welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:5: error: ';' expected but ')' found.
  nbBscuits = nbBiscuits + 1)
                            ^Poucet:7: error: ')' expected but 'case' found.
  case nbBiscuits >= 3 => gauche();
  ^Poucet:8: error: '}' expected but 'case' found.
  case nbBiscuits <= 2 => droite();
  ^Poucet:9: error: 'while' expected but '}' found.
  } 
  ^Poucet:14: error: eof expected but '}' found.
}
^