welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
var nbBiscuits: Int=0
do {
  (for (n <- 1 to 5){
    avance();
  nbBscuits = nbBiscuits + 1)
  }
  case nbBiscuits >= 3 => gauche();
  case nbBiscuits <= 2 => droite();
  } 
  while (estSurBlanc)
avance();